# Qt6CoreLearning

./: .gitmodules  README.md
Cpp/AlgorithmsMacros/: CMakeLists.txt  main.cpp  test.cpp  test.h
Cpp/FileSystem/: CMakeLists.txt  main.cpp
Cpp/FirstExercises/Casting/: CMakeLists.txt  car.cpp  car.h  dog.cpp  dog.h  feline.cpp  feline.h  main.cpp  racecar.cpp  racecar.h
Cpp/FirstExercises/DogAndOwner/: CMakeLists.txt  dog.cpp  dog.h  main.cpp  owner.cpp  owner.h
Cpp/FirstExercises/FirstExercises/: CMakeLists.txt  main.cpp
Cpp/FirstExercises/Monitor-test/: CMakeLists.txt  main.cpp  monitor.cpp  monitor.h  test.cpp  test.h
Cpp/FirstExercises/Property/: CMakeLists.txt  main.cpp  test.cpp  test.h  watcher.cpp  watcher.h
Cpp/FirstExercises/SignalSlot1-Radio-Station/: CMakeLists.txt  main.cpp  radio.cpp  radio.h  station.cpp  station.h
Cpp/FirstExercises/Timer/: CMakeLists.txt  main.cpp  test.cpp  test.h
Cpp/GeminiReader/GeminiReaderConsoleTest/: CMakeLists.txt  main.cpp
Cpp/GeminiReader/blockingsender/: CMakeLists.txt  dialog.cpp  dialog.h  main.cpp  senderthread.cpp  senderthread.h
Cpp/InterceptingQDebugMessages/: CMakeLists.txt  logger.cpp  logger.h  main.cpp  test.cpp  test.h
Cpp/Networking/: CMakeLists.txt  chat.cpp  chat.h  commandline.cpp  commandline.h  main.cpp  multithreadsenkrontcpclient.cpp  multithreadsenkrontcpclient.h  multithreadtcpserver.cpp  multithreadtcpserver.h  networkaccessmanager.cpp  networkaccessmanager.h  tcpclient.cpp  tcpserver.cpp  tcpserver.h  udpclient.cpp  udpclient.h
Cpp/OperatingSystem/: CMakeLists.txt  commander.cpp  commander.h
Cpp/QSettings/: CMakeLists.txt  main.cpp
Cpp/QThread1/: CMakeLists.txt  consumer.cpp  consumer.h  counter.cpp  counter.h  main.cpp  manager.cpp  manager.h  producer.cpp  producer.h  test.cpp  test.h  widget.cpp  widget.h  worker.cpp  worker.h  workersemaphores.cpp  workersemaphores.h
Cpp/QtContainers/: CMakeLists.txt  main.cpp  test.cpp  test.h
Cpp/Serialization/: CMakeLists.txt  converter.cpp  converter.h  main.cpp  test.cpp  test.h
Cpp/ThreadingExercises/thread1/: CMakeLists.txt  main.cpp  worker.cpp  worker.h
Cpp/ThreadingExercises/threadCommunication/: CMakeLists.txt  main.cpp  worker.cpp  worker.h
Cpp/Timer/: CMakeLists.txt  main.cpp  test.cpp  test.h  watcher.cpp  watcher.h
Cpp/View-ReadOnly/: CMakeLists.txt  main.cpp  person.cpp  person.h
Cpp/threadBasics/: CMakeLists.txt
Youtube/QtYoutube/: CMakeLists.txt  chat.cpp  chat.h  commandline.cpp  commandline.h  main.cpp  tcpclient.cpp  tcpclient.h  udpclient.cpp  udpclient.h
